--- a/TodoBack/.env
+++ b/TodoBack/.env
@@ -1,4 +1,4 @@
 PORT=3000
 SECRET_KEY= 7cde2a9d65363ebd40424d4c791127b6d94e4936dc0e2812
 
-MONGODB_URL=mongodb://localhost:27017/mi_basedatos
+MONGODB_URL=mongodb://mongo-db:27017/mi_basedatos
